--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             color: rgb(13, 44, 84);
             border-right: 4px solid #0d2c54;
             padding: 0 20px;
+            justify-content: space-around;  /* espace égal entre les liens */
+            flex-wrap: wrap;  
         }
 
         nav a :hover {
@@ -701,3 +703,4 @@
 </body>
 
 </html>
+
