--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             gap: 3rem;
             display: grid;
-            grid-template-columns: 380px 380px 380px;
+             grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
             grid-template-rows: 700px 700px;
             padding: 10px;
             margin-left: 1rem;
@@ -703,4 +703,5 @@
 </body>
 
 </html>
+
 
