--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
             gap: 3rem;
             display: grid;
              grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
-            grid-template-rows: 700px 700px;
             padding: 10px;
             margin-left: 1rem;
             margin-right: 1rem;
@@ -168,10 +167,11 @@
 
         .carousel {
             position: relative;
-            width: 70rem;
+            width: 100%;
             height: 40rem;
             overflow: hidden;
             margin-bottom: 4rem;
+            max-width: 800px; /* largeur max du carrousel */
         }
 
         /* Chaque diapo superposée */
@@ -703,5 +703,6 @@
 </body>
 
 </html>
+
 
 
