--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
             overflow: hidden;
             margin-bottom: 4rem;
             max-width: 800px; /* largeur max du carrousel */
+            justify-content: center; /* centre horizontalement */
+            align-items: center;  
         }
 
         /* Chaque diapo superposée */
@@ -703,6 +705,7 @@
 </body>
 
 </html>
+
 
 
 
