--- a/index.html
+++ b/index.html
@@ -281,6 +281,8 @@
             color: #fff;
             padding: 40px 20px 10px;
             font-family: Arial, sans-serif;
+            flex-wrap: wrap;           /* permet de passer en colonne si pas de place */
+            flex: 1 1 250px; 
         }
 
         .footer-container {
@@ -706,6 +708,7 @@
 </body>
 
 </html>
+
 
 
 
