--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           display: inline-block;
           margin-top: 10px;
           padding: 8px 15px;
-          background: #007BFF;
+          background: rgb(99, 156, 99);
           color: white;
           text-decoration: none;
           border-radius: 5px;
@@ -337,7 +337,7 @@
         }
         
         .btn-message:hover {
-          background: #0056b3;
+          background: rgb(69, 104, 69);
         }
         
         .footer-bottom {
@@ -654,37 +654,33 @@
                 <div class="footer-section">
                 <h3 style="color:white; font-size:18px; margin-bottom:15px;">Informations</h3>
                 <ul style="list-style:none; padding:0; margin:0; line-height:1.8;">
-                    <a href="#" class="btn-message">Envoyer un message</a>
+                    <a href="#" class="btn-message"><strong>Envoyer un message</a></strong>
                     <p>Abomey, Hôtel de ville</p>
                     <p>BP 486 Abomey, Sogbo-Aliho</p>
                     <p>Tel: (229) 01 48 11 20 29</p>
                     <li><a href="mailto:unstim@unstim.bj" style="color:#ddd;">unstim@unstim.bj</a></li>
                 </ul>
                 </div>
-
-        <hr style="border:0; border-top:1px solid #444; margin:30px 0;">
-
-        <!-- Bas du footer -->
+               <!-- Bas du footer -->
         <div class="footer-bottom">
            <p> Science et technologie au service de l'homme</p>
            <p> © Unstim - 2025 - Tous droits réservés</p> 
             <a href="#" style="color:#ddd; text-decoration:none;">Politique de confidentialité</a>
         </div>
-        <div class="separator"></div>
-        <div class="footer-socials">
+        <div class="social-icons">
             <a href="https://facebook.com/https://facebook.com/groups/449999800216990/" target="_blank"><i
                     class="fab fa-facebook"></i></a>
             <a href="https://instagram.com/https://www.instagram.com/p/DFmuUuON7Jf/?utm_source=ig_web_copy_link"
                 target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://wa.me/22995736112" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
-        <p style="text-align: center;">&copy; 2025 Université de Lokossa - Tous droits réservés</p>
     </div>
     </footer>
     <script src="accueil.js"></script>
 </body>
 
 </html>
+
 
 
 
