--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
           margin-top: 30px;
           border-top: 1px solid #333;
           padding-top: 20px;
+          justify-content: center;
         }
         
         .social-icons {
@@ -662,11 +663,7 @@
                 </ul>
                 </div>
                <!-- Bas du footer -->
-        <div class="footer-bottom">
-           <p> Science et technologie au service de l'homme</p>
-           <p> © Unstim - 2025 - Tous droits réservés</p> 
-            <a href="#" style="color:#ddd; text-decoration:none;">Politique de confidentialité</a>
-        </div>
+       
         <div class="social-icons">
             <a href="https://facebook.com/https://facebook.com/groups/449999800216990/" target="_blank"><i
                     class="fab fa-facebook"></i></a>
@@ -674,12 +671,18 @@
                 target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://wa.me/22995736112" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
+         <div class="footer-bottom">
+           <p> Science et technologie au service de l'homme</p>
+           <p> © Unstim - 2025 - Tous droits réservés</p> 
+            <a href="#" style="color:#ddd; text-decoration:none;">Politique de confidentialité</a>
+        </div>
     </div>
     </footer>
     <script src="accueil.js"></script>
 </body>
 
 </html>
+
 
 
 
