--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
         
         .social-icons {
           margin-top: 15px;
+         justify-content: center;
         }
         
         .social-icons a {
@@ -682,6 +683,7 @@
 </body>
 
 </html>
+
 
 
 
