--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
         .social-icons {
           margin-top: 15px;
          justify-content: center;
+         margin-bottom: 12px;
         }
         
         .social-icons a {
@@ -670,7 +671,7 @@
                     class="fab fa-facebook"></i></a>
             <a href="https://instagram.com/https://www.instagram.com/p/DFmuUuON7Jf/?utm_source=ig_web_copy_link"
                 target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://wa.me/22995736112" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://wa.me/22995736112" target="_blank"><i class="fab fa-whatsapp"></i></a><br><br>
         </div>
          <div class="footer-bottom">
            <p> Science et technologie au service de l'homme</p>
@@ -683,6 +684,7 @@
 </body>
 
 </html>
+
 
 
 
