--- a/Contacts.html
+++ b/Contacts.html
@@ -420,7 +420,7 @@
                         <li><a href="Accueil.html"> <strong> Formations </strong></a></li>
                         <li><a href="Accueil.html"> <strong> Evénements et Réalisations </strong></a>
                         </li>
-                        <li><a href="contacts.html"> <strong> Contacts</strong></a></li>
+                        <li><a href="Contacts.html"> <strong> Contacts</strong></a></li>
                         <li><a href="rsv.html"><strong>Réservation de cabines</strong></a></li>
                     </ul>
                 </div>
@@ -514,7 +514,7 @@
                         <li><a href="Accueil.html"
                                 style="color:#ddd; text-decoration:none;">Evénements
                                 et Réalisations</a></li>
-                        <li><a href="contacts.html" style="color:#ddd; text-decoration:none;"> Contacts</a></li>
+                        <li><a href="Contacts.html" style="color:#ddd; text-decoration:none;"> Contacts</a></li>
                         <li><a href="rsv.html" style="color:#ddd; text-decoration:none;">Réservation de cabines</a>
                         </li>
                     </ul>
@@ -617,5 +617,6 @@
         </script>
 
     </body>
+
 
     </html>
