--- a/enregistrement.html
+++ b/enregistrement.html
@@ -240,7 +240,7 @@
                     <li><a href="#formation"> <strong> Formations </strong></a></li>
                     <li><a href="#e&r"> <strong> Evénements et Réalisations </strong></a>
                     </li>
-                    <li><a href="contacts.html"> <strong> Contacts</strong></a></li>
+                    <li><a href="Contacts.html"> <strong> Contacts</strong></a></li>
                     <li><a href="rsv.html"><strong>Réservation de cabines</strong></a></li>
                 </ul>
             </div>
@@ -286,7 +286,7 @@
                     </li>
                     <li><a href="#e&r" style="color:#ddd; text-decoration:none;">Evénements
                             et Réalisations</a></li>
-                    <li><a href="contacts.html" style="color:#ddd; text-decoration:none;"> Contacts</a></li>
+                    <li><a href="Contacts.html" style="color:#ddd; text-decoration:none;"> Contacts</a></li>
                     <li><a href="rsv.html" style="color:#ddd; text-decoration:none;">Réservation de cabines</a>
                     </li>
                 </ul>
@@ -325,5 +325,6 @@
         <p style="text-align: center;">&copy; 2025 Université de Lokossa - Tous droits réservés</p>
     </footer>
 </body>
+
 
 </html>
