--- a/rsv.html
+++ b/rsv.html
@@ -249,7 +249,7 @@
           <li><a href="Accueil.html"> <strong> Formations </strong></a></li>
           <li><a href="Accueil.html"> <strong> Evénements et Réalisations </strong></a>
           </li>
-          <li><a href="contacts.html"> <strong> Contacts</strong></a></li>
+          <li><a href="Contacts.html"> <strong> Contacts</strong></a></li>
           <li><a href="rsv.html"><strong>Réservation de cabines</strong></a></li>
         </ul>
       </div>
@@ -394,5 +394,6 @@
   </footer>
 
 </body>
+
 
 </html>
