--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                 <div class="footer-section">
                 <h3 style="color:white; font-size:18px; margin-bottom:15px;">Informations</h3>
                 <ul style="list-style:none; padding:0; margin:0; line-height:1.8;">
-                    <a href="#" class="btn-message"><strong>Envoyer un message</a></strong>
+                    <a href="Contacts.html" class="btn-message"><strong>Envoyer un message</a></strong>
                     <p>Abomey, Hôtel de ville</p>
                     <p>BP 486 Abomey, Sogbo-Aliho</p>
                     <p>Tel: (229) 01 48 11 20 29</p>
@@ -684,6 +684,7 @@
 </body>
 
 </html>
+
 
 
 
