--- a/rsv.html
+++ b/rsv.html
@@ -328,61 +328,54 @@
       document.getElementById("cabine").innerHTML = "<option value=''>-- Sélectionner une cabine --</option>";
     });
   </script>
-  <footer id="foot">
-    <div id="footer-container">
-
-      <img class="footer-logo" src="télécharger.png" alt="error" width="80px">
+    <footer id="foot" class="footer">
+    <div class="footer-container">
+        <div class="footer-logo">
+            <img class="footer-logo" src="télécharger.png" alt="error" width="80px">
+        </div>
+            <div class="footer-section">
+                <h3 style="color:white; font-size:18px; margin-bottom:15px;">Liens rapides</h3>
+                <ul style="list-style:none; padding:0; margin:0; line-height:1.8;">
+                    <li><a href="Accueil.html" style="color:#ddd; text-decoration:none;">Accueil</a></li>
+                    <li><a href="#formation" style="color:#ddd; text-decoration:none;">Formations</a>
+                    </li>
+                    <li><a href="#e&r" style="color:#ddd; text-decoration:none;">Evénements
+                            et Réalisations</a></li>
+                    <li><a href="Contacts.html" style="color:#ddd; text-decoration:none;"> Contacts</a></li>
+                    <li><a href="rsv.html" style="color:#ddd; text-decoration:none;">Réservation de cabines</a>
+                    </li>
+                </ul>
+            </div>
+                <div class="footer-section">
+                <h3 style="color:white; font-size:18px; margin-bottom:15px;">Informations</h3>
+                <ul style="list-style:none; padding:0; margin:0; line-height:1.8;">
+                    <a href="Contacts.html" class="btn-message"><strong>Envoyer un message</a></strong>
+                    <p>Abomey, Hôtel de ville</p>
+                    <p>BP 486 Abomey, Sogbo-Aliho</p>
+                    <p>Tel: (229) 01 48 11 20 29</p>
+                    <li><a href="mailto:unstim@unstim.bj" style="color:#ddd;">unstim@unstim.bj</a></li>
+                </ul>
+                </div>
+               <!-- Bas du footer -->
+       
+        <div class="social-icons">
+            <a href="https://facebook.com/https://facebook.com/groups/449999800216990/" target="_blank"><i
+                    class="fab fa-facebook"></i></a>
+            <a href="https://instagram.com/https://www.instagram.com/p/DFmuUuON7Jf/?utm_source=ig_web_copy_link"
+                target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://wa.me/22995736112" target="_blank"><i class="fab fa-whatsapp"></i></a><br><br>
+        </div>
+         <div class="footer-bottom">
+           <p> Science et technologie au service de l'homme</p>
+           <p> © Unstim - 2025 - Tous droits réservés</p> 
+            <a href="#" style="color:#ddd; text-decoration:none;">Politique de confidentialité</a>
+        </div>
     </div>
-    <div style="max-width:1200px; margin:auto; display:grid; grid-template-columns: 300px 300px; gap:40rem;">
-      <div>
-        <h3 style="color:white; font-size:18px; margin-bottom:15px;">Liens rapides</h3>
-        <ul style="list-style:none; padding:0; margin:0; line-height:1.8;">
-          <li><a href="Accueil.html" style="color:#ddd; text-decoration:none;">Accueil</a></li>
-          <li><a href="Accueil.html" style="color:#ddd; text-decoration:none;">Formations</a>
-          </li>
-          <li><a href="Accueil.html" style="color:#ddd; text-decoration:none;">Evénements
-              et Réalisations</a></li>
-          <li><a href="Contacts.html" style="color:#ddd; text-decoration:none;"> Contacts</a></li>
-          <li><a href="rsv.html" style="color:#ddd; text-decoration:none;">Réservation de cabines</a>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <h3 style="color:white; font-size:18px; margin-bottom:15px;">Informations</h3>
-        <ul style="list-style:none; padding:0; margin:0; line-height:1.8;">
-          <li><a href="#" style="color:#ddd; text-decoration:none;">Envoyer un message</a></li>
-          <li style="color:#ddd;">Abomey, Hôtel de ville</li>
-          <li style="color:#ddd;">BP 486 Abomey, Sogbo-Aliho</li>
-          <li style="color:#ddd;">Tel: (229) 40 522 199 / 64 057 048</li>
-          <li><a href="mailto:unstim@unstim.bj" style="color:#ddd;">unstim@unstim.bj</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <hr style="border:0; border-top:1px solid #444; margin:30px 0;">
-
-    <!-- Bas du footer -->
-    <div style="text-align:center; font-size:14px; color:#bbb;">
-      Science et technologie au service de l'homme <br>
-      © Unstim - 2025 - Tous droits réservés <br>
-      <a href="#" style="color:#ddd; text-decoration:none;">Politique de confidentialité</a>
-    </div>
-    <div class="separator"></div>
-    <div class="footer-socials">
-      <a href="https://facebook.com/https://facebook.com/groups/449999800216990/" target="_blank"><i
-          class="fab fa-facebook"></i></a>
-      <a href="https://instagram.com/https://www.instagram.com/p/DFmuUuON7Jf/?utm_source=ig_web_copy_link"
-        target="_blank"><i class="fab fa-twitter"></i></a>
-      <a href="https://wa.me/22995736112" target="_blank"><i class="fab fa-whatsapp"></i></a>
-    </div>
-    <div>
-      <img id="flag" src="drapeau.webp" alt="error">
-    </div>
-    <p style="text-align: center;">&copy; 2025 Université de Lokossa - Tous droits réservés</p>
-  </footer>
+    </footer>
 
 </body>
 
 
 </html>
+
 
