--- a/Contacts.html
+++ b/Contacts.html
@@ -361,9 +361,10 @@
                 align-items: center;
                 list-style: none;
                 display: flex;
-                gap: 7rem;
-                margin-bottom: 10px;
-                margin-top: 10px;
+                gap: 3rem;
+                margin: 10px 0;
+                flex-wrap: wrap;     /* permet de passer à la ligne si l’espace manque */
+                justify-content: center;
 
 
             }
@@ -374,8 +375,11 @@
                 border-right: 4px solid #0d2c54;
                 padding: 0 20px;
             }
+            nav a:last-child {
+            border-right: none; /* enlève la bordure sur le dernier élément */
+            }
 
-            nav a :hover {
+            nav a:hover {
                 text-decoration: underline;
             }
 
@@ -599,6 +603,7 @@
 
 
     </html>
+
 
 
 
