--- a/Contacts.html
+++ b/Contacts.html
@@ -356,32 +356,28 @@
                 font-weight: bold;
             }
 
-            .menu {
-                text-decoration: none;
-                align-items: center;
-                list-style: none;
-                display: flex;
-                gap: 3rem;
-                margin: 10px 0;
-                flex-wrap: wrap;     /* permet de passer à la ligne si l’espace manque */
-                justify-content: center;
-
-
-            }
-
-            nav a {
-                text-decoration: none;
-                color: rgb(13, 44, 84);
-                border-right: 4px solid #0d2c54;
-                padding: 0 20px;
-            }
-            nav a:last-child {
-            border-right: none; /* enlève la bordure sur le dernier élément */
-            }
-
             nav a:hover {
                 text-decoration: underline;
             }
+            @media (max-width: 768px) {
+    .menu {
+        flex-direction: column;
+        gap: 0;           /* on utilise la bordure pour espacer */
+        align-items: center;
+    }
+
+    nav a {
+        border-right: none;
+        border-bottom: 2px solid #0d2c54;  /* barre entre les options verticales */
+        padding: 10px 0;
+        width: 100%;       /* pour que la barre fasse toute la largeur */
+        text-align: center;
+    }
+
+    nav a:last-child {
+        border-bottom: none;  /* pas de barre après le dernier élément */
+    }
+}
 
             #liste {
 
@@ -603,6 +599,7 @@
 
 
     </html>
+
 
 
 
