--- a/Contacts.html
+++ b/Contacts.html
@@ -225,12 +225,14 @@
             /* responsive */
             @media (max-width:880px) {
                 .container {
-                    grid-template-columns: 1fr;
+                   flex-direction: column;   /* plus en ligne */
+        align-items: stretch;     /* prend toute la largeur */
+        padding: 16px;
                 }
 
-                .right {
-                    order: -1
-                }
+               .left, .right {
+        width: 100%;              /* pleine largeur */
+        padding: 16px;}
             }
 
 
@@ -623,6 +625,7 @@
 
 
     </html>
+
 
 
 
