--- a/index.html
+++ b/index.html
@@ -89,14 +89,16 @@
 
         .overlay {
             position: absolute;
-            bottom: 20px;
-            left: 20px;
-            right: 20px;
-            background: rgba(0, 32, 64, 0.7);
-            color: white;
-            padding: 20px;
-            font-size: 20px;
-            line-height: 1.5;
+      bottom: 20px; /* distance depuis le bas */
+      left: 0;
+      right: 0;
+      background: rgba(0, 48, 120, 0.75); /* bleu semi-transparent */
+      color: white;
+      padding: 20px;
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+      line-height: 1.6;
+      text-align: justify;
         }
 
         .f-title {
@@ -694,6 +696,7 @@
 </body>
 
 </html>
+
 
 
 
