--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             }
 
         body {
-            background-color: white
+            background-color: white}
        
 
         .overlay {
@@ -92,7 +92,7 @@
       bottom: 20px; /* distance depuis le bas */
       left: 0;
       right: 0;
-      background: rgba(0, 48, 120, 0.75); /* bleu semi-transparent */
+      background: rgba(13, 44, 84,0.75); 
       color: white;
       padding: 20px;
       font-family: Arial, sans-serif;
@@ -696,6 +696,7 @@
 </body>
 
 </html>
+
 
 
 
