--- a/index.html
+++ b/index.html
@@ -434,9 +434,7 @@
                
                 <div class="overlay">
                     <div class="overlay-text"> 
-                    <p>L'Institut National Supérieur de Technologie Indutsrielle (INSTI) est une référence dans la
-                        formation Technique et professionnelle au Bénin. Nous offrons des programmes de qualité en Génie
-                        Civil, Informatique et bien plus.</p>
+                    <p>L’Institut National Supérieur de Technologie Industrielle (INSTI) est une institution d’enseignement supérieur de référence au Bénin, dédiée à la formation technique et professionnelle d’excellence. À travers ses programmes novateurs en Génie Civil, Informatique, Électromécanique et bien d’autres domaines stratégiques, l’INSTI forme des cadres compétents, capables de répondre aux défis technologiques et industriels de demain, tout en contribuant activement au développement économique et social du pays.</p>
                     </div>
                 </div>
 
@@ -705,6 +703,7 @@
 </body>
 
 </html>
+
 
 
 
