--- a/rsv.html
+++ b/rsv.html
@@ -134,7 +134,7 @@
       background-repeat: no-repeat;
       width: 100%;
       /* prend toute la largeur de la page */
-      height: 400px;
+      height: auto;
       text-align: center;
     }
 
@@ -399,6 +399,7 @@
 
 
 </html>
+
 
 
 
