--- a/index.html
+++ b/index.html
@@ -90,11 +90,16 @@
         .overlay {
       position: relative;
       width: 100%;
-      height: 250px; /* tu peux ajuster */
+      height:auto; /* tu peux ajuster */
       background: url("entrée.jpg") center/cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      width: 100%;
+      /* prend toute la largeur de la page */
+      height: auto;
     }
 
     .overlay-text {
@@ -703,6 +708,7 @@
 </body>
 
 </html>
+
 
 
 
