--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       background-repeat: no-repeat;
       width: 100%;
       /* prend toute la largeur de la page */
-      height: 5rem;
+     object-fit: contain;
     }
 
     .overlay-text {
@@ -708,6 +708,7 @@
 </body>
 
 </html>
+
 
 
 
