--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
       align-items: center;
       justify-content: center;
       background-size: cover;
-      background-repeat: no-repeat;
+      background-size: contain;
       width: 100%;
       /* prend toute la largeur de la page */
-     object-fit: contain;
+     height: 400px;
     }
 
     .overlay-text {
@@ -708,6 +708,7 @@
 </body>
 
 </html>
+
 
 
 
