--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       background-size: contain;
       width: 100%;
       /* prend toute la largeur de la page */
-     height: 400px;
+     height: 10rem;
     }
 
     .overlay-text {
@@ -707,6 +707,7 @@
 </body>
 
 </html>
+
 
 
 
