--- a/index.html
+++ b/index.html
@@ -87,21 +87,18 @@
             background-color: white}
        
 
-        .overlay {
+      .container {
       position: relative;
       width: 100%;
-      height:auto; /* tu peux ajuster */
-      background: url("entrée.jpg") center/cover no-repeat;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-size: contain;
-      width: 100%;
-      /* prend toute la largeur de la page */
-     height: 10rem;
+      max-width: 1100px; /* optionnel */
     }
 
-    .overlay-text {
+    .container img {
+      width: 100%;
+      display: block;
+    }
+
+    .overlay {
       background: rgba(13, 44, 84,0.75); /* bleu transparent */
       color: white;
       padding: 20px 30px;
@@ -416,10 +413,13 @@
     <nav>
         <header>
             <div class="header">
-                <img class="logo" src="télécharger.png" alt="error">
+                <div class="container">
+                <img class="logo" src="entrée.jpg" alt="error">
+                <div class="overlay">
                 <h1 class="titre">INSTI<br> <small>Institut National Supérieur de Technologie Industrielle </small>
                 </h1>
-            </div>
+                </div>
+               </div>
             <div id="liste">
                 <ul class="menu">
                     <li><a href="Accueil.html"> <strong> Accueil </strong></a></li>
@@ -707,6 +707,7 @@
 </body>
 
 </html>
+
 
 
 
