--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     .container img {
       width: 100%;
       display: block;
+      height: 10rem;
     }
 
     .overlay {
@@ -707,6 +708,7 @@
 </body>
 
 </html>
+
 
 
 
