--- a/index.html
+++ b/index.html
@@ -87,19 +87,13 @@
             background-color: white}
        
 
-      .container {
-      position: relative;
-      width: 100%;
-      max-width: 1100px; /* optionnel */
-    }
-
-    .container img {
+    .overlay img {
       width: 100%;
       display: block;
       height: 10rem;
     }
 
-    .overlay {
+    .overlay-text{
       background: rgba(13, 44, 84,0.75); /* bleu transparent */
       color: white;
       padding: 20px 30px;
@@ -415,7 +409,7 @@
         <header>
             <div class="header">
                 <div class="container">
-                <img class="logo" src="entrée.jpg" alt="error">
+                <img class="logo" src="télécharger.jpg" alt="error">
                 <div class="overlay">
                 <h1 class="titre">INSTI<br> <small>Institut National Supérieur de Technologie Industrielle </small>
                 </h1>
@@ -435,15 +429,12 @@
     </nav>
     <main>
         <section>
-            <div class="container">
-               
-                <div class="overlay">
+            <div class="overlay">
+                     <img src="entrée.png" alt="error">
                     <div class="overlay-text"> 
                     <p>L’Institut National Supérieur de Technologie Industrielle (INSTI) est une institution d’enseignement supérieur de référence au Bénin, dédiée à la formation technique et professionnelle d’excellence. À travers ses programmes novateurs en Génie Civil, Informatique, Électromécanique et bien d’autres domaines stratégiques, l’INSTI forme des cadres compétents, capables de répondre aux défis technologiques et industriels de demain, tout en contribuant activement au développement économique et social du pays.</p>
                     </div>
-                </div>
-
-            </div>
+           </div>
         </section>
         <section>
             <h2><i class="fas fa-chart-bar"></i>STATISTIQUES DE L'UNIVERSITÉ</h2>
@@ -708,6 +699,7 @@
 </body>
 
 </html>
+
 
 
 
