--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
        
 
     .overlay img {
-      width: 100%;
+      width: 10rem;
       display: block;
       height: 10rem;
+      max-width: 1100px
     }
 
     .overlay-text{
