--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             background-color: white}
        
 
-    .overlay img {
+    .en {
       width: 10rem;
       display: block;
       height: 10rem;
@@ -431,7 +431,7 @@
     <main>
         <section>
             <div class="overlay">
-                     <img src="entrée.png" alt="error">
+                     <img class="en" src="entrée.png" alt="error">
                     <div class="overlay-text"> 
                     <p>L’Institut National Supérieur de Technologie Industrielle (INSTI) est une institution d’enseignement supérieur de référence au Bénin, dédiée à la formation technique et professionnelle d’excellence. À travers ses programmes novateurs en Génie Civil, Informatique, Électromécanique et bien d’autres domaines stratégiques, l’INSTI forme des cadres compétents, capables de répondre aux défis technologiques et industriels de demain, tout en contribuant activement au développement économique et social du pays.</p>
                     </div>
@@ -700,6 +700,7 @@
 </body>
 
 </html>
+
 
 
 
