--- a/index.html
+++ b/index.html
@@ -87,16 +87,10 @@
             background-color: white}
        
 
-    .overlay {
-  position: relative;   /* nécessaire pour overlay */
-  width: 100%;          /* prend toute la largeur de l'écran */
-  height: 400px;        /* hauteur fixe que tu choisis */
-  overflow: hidden;     /* pour éviter que l'image dépasse */
-}
 
 .en {
   width: 100%;          /* prend toute la largeur */
-  height: 100%;         /* prend toute la hauteur fixée */
+  height: 700px;         /* prend toute la hauteur fixée */
   object-fit: cover;    /* garde l'image proportionnelle et couvre tout */
 }
 
@@ -439,12 +433,11 @@
     </nav>
     <main>
         <section>
-            <div class="overlay">
+           
                      <img class="en" src="entrée.png" alt="error">
                     <div class="overlay-text"> 
                     <p>L’Institut National Supérieur de Technologie Industrielle (INSTI) est une institution d’enseignement supérieur de référence au Bénin, dédiée à la formation technique et professionnelle d’excellence. À travers ses programmes novateurs en Génie Civil, Informatique, Électromécanique et bien d’autres domaines stratégiques, l’INSTI forme des cadres compétents, capables de répondre aux défis technologiques et industriels de demain, tout en contribuant activement au développement économique et social du pays.</p>
                     </div>
-           </div>
         </section>
         <section>
             <h2><i class="fas fa-chart-bar"></i>STATISTIQUES DE L'UNIVERSITÉ</h2>
@@ -709,6 +702,7 @@
 </body>
 
 </html>
+
 
 
 
