--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             box-sizing: border-box;
         }
 
-        .header {
+         .header {
                             display: flex;
                             align-items: center;
                             background-color: #0d2c54;
@@ -82,6 +82,12 @@
                     border-bottom: none;
                 }
             }
+    
+            /* --- Effet hover --- */
+            .menu li a:hover {
+                text-decoration: underline;
+            }
+            
 
         body {
             background-color: white}
@@ -706,6 +712,7 @@
 </body>
 
 </html>
+
 
 
 
