--- a/index.html
+++ b/index.html
@@ -91,7 +91,18 @@
         height: 600px;
         display: block;
     }
-
+        .hero-text{
+            position: absolute;
+            color: white;
+           bottom: 20px;
+            left: 20px;
+            right: 20px;
+            background: rgba(0, 32, 64, 0.7);
+            
+            padding: 20px;
+            font-size: 20px;
+            line-height: 1.5;
+        }
         .f-title {
             padding-left: 12px;
             align-items: center;
@@ -690,6 +701,7 @@
 </body>
 
 </html>
+
 
 
 
