--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <header>
             <div class="header">
                 <div class="container">
-                <img class="logo" src="télécharger.jpg" alt="error">
+                <img class="logo" src="télécharger.png" alt="error">
                 <div class="overlay">
                 <h1 class="titre">INSTI<br> <small>Institut National Supérieur de Technologie Industrielle </small>
                 </h1>
@@ -703,6 +703,7 @@
 </body>
 
 </html>
+
 
 
 
