--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         .titre {
                             font-size: 24px;
                             font-weight: bold;
+                            flex-direction: column;
                         }
             
                         
@@ -703,6 +704,7 @@
 </body>
 
 </html>
+
 
 
 
